# eucaim-metrics

./: .dockerignore  Dockerfile  README.md  pyproject.toml
eucaim_eval/: __init__.py  base.py  bootstrap.py  caching.py  classification.py  preprocessing.py  segmentation.py  utils.py
eucaim_eval/entrypoints/: segmentation.py
tests/: test_classification_metrics.py  test_segmentation_metrics_simulated.py
