[project]
name = "eucaim_metrics"
version = "0.1.0"
description = "Set of utilities and scripts to calculate metrics for the EUCAIM project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "simpleitk>=2.4.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
